Fixed teacher portal pages & added home1.html

--- a/Website/portal/materials.html
+++ b/Website/portal/materials.html
@@ -307,7 +307,7 @@
                   <td>
                     <span class="badge bg-yellow">$100</span>
                   </td>
-                  <td><a style="width:100px"class="btn btn-success btn-xs">Unavailable</a></td>
+                  <td><a style="width:100px"class="btn btn-success btn-xs">Available</a></td>
                 </tr>
                 <tr>
                   <td><img src="dist/img/violin.png" alt="" style="width:100px;height:100px"></td>
@@ -315,7 +315,7 @@
                   <td>
                     <span class="badge bg-yellow">$50</span>
                   </td>
-                  <td><a style="width:100px"class="btn btn-warning btn-xs">Unavailable</a></td>
+                  <td><a style="width:100px"class="btn btn-danger btn-xs">Unavailable</a></td>
                 </tr>
               </table>
             </div>
