--- a/Website/portal/teacherportal/classes.html
+++ b/Website/portal/teacherportal/classes.html
@@ -191,15 +191,16 @@
 					    <table style="width:100%">
   
   <tr>
-    <td><b>Violin for Beginners</b></td>
+    <td><b>Class 101: Violin for Beginners</b></td>
     <td>Wednesday</td>
     <td>12:00 AM - 14:00 PM</td>
     <td>Room 101</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><b>Class 103: Piano for Beginners</b></td>
+	<td>Wednesday</td>
+    <td>14:00 AM - 16:00 PM</td>
+    <td>Room 202</td>
   </tr>
   <tr>
     <td></td>
