--- a/Website/portal/teacherportal/timetable.html
+++ b/Website/portal/teacherportal/timetable.html
@@ -68,7 +68,7 @@
 
                 <p>
                   Keyboard Smasher
-                  <small>Student</small>
+                  <small>Teacher</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -133,7 +133,7 @@
           <ul class="treeview-menu">
             <li><a href="profile.html"><i class="fa fa-user"></i> My Profile</a></li>
             <li class="active"><a href="timetable.html"><i class="fa fa-calendar-o"></i> My Timetable</a></li>
-            <li><a href="classes.html"><i class="fa fa-bookmark"></i> My Classes</a></li>
+            
             
           </ul>
         </li>
@@ -282,42 +282,42 @@
       //Random default events
       events: [
         {
-          title: 'Piano',
+          title: 'Class 101 Piano',
           start: new Date(y, m, 1),
 		  allDay: false,
           backgroundColor: "#f56954", //red
           borderColor: "#f56954" //red
         },
 		{
-          title: 'Piano',
+          title: 'Class 101 Piano',
           start: new Date(y, m, 15, 18),
 		  allDay: false,
           backgroundColor: "#f56954", //red
           borderColor: "#f56954" //red
         },
 		{
-          title: 'Piano',
+          title: 'Class 101 Piano',
           start: new Date(y, m, 29),
 		  allDay: false,
           backgroundColor: "#f56954", //red
           borderColor: "#f56954" //red
         },
         {
-          title: 'Violin',
+          title: 'Class 102: Violin',
           start: new Date(y, m, 6, 11),
 		  allDay: false,
           backgroundColor: "#f39c12", //yellow
           borderColor: "#f39c12" //yellow
         },
 		{
-          title: 'Violin',
+          title: 'Class 102: Violin',
           start: new Date(y, m, d),
 		  allDay: false,
           backgroundColor: "#f39c12", //yellow
           borderColor: "#f39c12" //yellow
         },
         {
-          title: 'Cello',
+          title: 'Class 103: Cello',
           start: new Date(y, m, 20, 14),
 		  allDay: false,
           backgroundColor: "#00a65a", //Success (green)
