--- a/Website/portal/teacherportal/tools.html
+++ b/Website/portal/teacherportal/tools.html
@@ -70,7 +70,7 @@
 
                 <p>
                   Keyboard Smasher
-                  <small>Student</small>
+                  <small>Teacher</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -135,7 +135,7 @@
           <ul class="treeview-menu">
             <li><a href="profile.html"><i class="fa fa-user"></i> My Profile</a></li>
             <li><a href="timetable.html"><i class="fa fa-calendar-o"></i> My Timetable</a></li>
-            <li><a href="classes.html"><i class="fa fa-bookmark"></i> My Classes</a></li>
+            
             
           </ul>
         </li>
