--- a/Website/login.html
+++ b/Website/login.html
@@ -66,7 +66,8 @@
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
-          <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+          <!-- <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button> -->
+		  <a href="portal/index.html"class="btn btn-primary btn-block btn-flat">Sign In</a>
         </div>
         <!-- /.col -->
       </div>
