--- a/Website/career1.html
+++ b/Website/career1.html
@@ -41,10 +41,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="Enrolments.html">Enrolment</a></li>
 			<li><a href="About us.html">About Us</a></li>
-			<li><a href="career.html">Careers</a></li>
+			<li class="active"><a href="career.html">Careers</a></li>
           </ul>
           
         </div>
@@ -56,9 +56,6 @@
             <li class="dropdown user user-menu">
               <!-- Menu Toggle Button -->
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <!-- The user image in the navbar-->
-                
-                <!-- hidden-xs hides the username on small devices so only the image appears. -->
                 <span class="hidden-xs">Login</span>
               </a>
               <ul style="width: 370px;"class="dropdown-menu">
@@ -106,61 +103,107 @@
       <!-- /.container-fluid -->
     </nav>
   </header>
-  <!-- Full Width Column -->
+  
   <div style="background:url('image/back.gif') no-repeat;background-size:100%;"class="content-wrapper">
     <div id ="wrap">
-		<div id="slider">
-			<img src="image/image1.gif">
-		</div>
-
-</div>
-	<div id ="content">
-		<div id ="page-heading">
-			Our Courses<br>
-		</div>
-		<div class = "coursetype">
-			<div class= "coursename">
-			Children Course
-			</div>
-			<div class= "courselink">
-			&#9734;
-			</div>
-			<div class= "coursedescription">
-			Pinelands music programs
-			designed for children aged
-			between 3 to 12
-			</div>
-		</div>
-
-		<div class = "coursetype">
-			<div class= "coursename">
-			Children Course
-			</div>
-			<div class= "courselink">
-			 &#9825;
-			</div>
-			<div class= "coursedescription">
-			Pinelands music programs
-			designed for children aged
-			between 3 to 12
-			</div>
-
-		</div>
-			<div class = "coursetype">
-			<div class= "coursename">
-			Children Course
-			</div>
-			<div class= "courselink">
-			&#9813;
-			</div>
-			<div class= "coursedescription">
-			Pinelands music programs
-			designed for children aged
-			between 3 to 12
-			</div>
-
-		</div>
+  		<div id="slider">
+  			<img src="image/image1.gif">
+  		</div>
+  </div>
+   <div id = "content">
+	<div id = "page-heading">
+		Job Vacancies
 	</div>
+     <div id ="cname">
+ 			<img src="image/line.png">
+ 		 </div>
+  </div>
+  <div id="wrapper">
+       <div class="jobs">
+         <div class = "jtitle">
+           IT Services
+         </div>
+         <div class="caption">
+          Job Name:
+         </div>
+           <div class = "jname">
+             Senior PHP Developer
+           </div>
+         <div class="caption">
+         Post Date:
+         </div>
+           <div class = "jtime">
+             26/08/2016
+           </div>
+         <div class="caption">
+         Job Description:
+         </div>
+         <div class = "jdescription">
+           We are looking for an experienced Digital Telesales individual who
+           is passionate and proactive in their approach to consulting and
+           selling. This person is customer focused; putting the needs of our
+            clients at the forefront of everything they do and they are driven
+            by the idea and reality of success.
+         </div>
+         <input class = "button" name="more" type="button" value="MORE">
+       </div>
+       <div class="jobs">
+         <div class = "jtitle">
+           IT Services
+         </div>
+         <div class="caption">
+          Job Name:
+         </div>
+           <div class = "jname">
+             Senior PHP Developer
+           </div>
+         <div class="caption">
+         Post Date:
+         </div>
+           <div class = "jtime">
+             26/08/2016
+           </div>
+         <div class="caption">
+         Job Description:
+         </div>
+         <div class = "jdescription">
+           We are looking for an experienced Digital Telesales individual who
+           is passionate and proactive in their approach to consulting and
+           selling. This person is customer focused; putting the needs of our
+            clients at the forefront of everything they do and they are driven
+            by the idea and reality of success.
+         </div>
+         <input class = "button" name="more" type="button" value="MORE">
+       </div>
+       <div class="jobs">
+         <div class = "jtitle">
+           IT Services
+         </div>
+         <div class="caption">
+          Job Name:
+         </div>
+           <div class = "jname">
+             Senior PHP Developer
+           </div>
+         <div class="caption">
+         Post Date:
+         </div>
+           <div class = "jtime">
+             26/08/2016
+           </div>
+         <div class="caption">
+         Job Description:
+         </div>
+         <div class = "jdescription">
+           We are looking for an experienced Digital Telesales individual who
+           is passionate and proactive in their approach to consulting and
+           selling. This person is customer focused; putting the needs of our
+            clients at the forefront of everything they do and they are driven
+            by the idea and reality of success.
+         </div>
+         <input class = "button" name="more" type="button" value="MORE">
+       </div>
+       </div>
   </div>
   <!-- /.content-wrapper -->
   <footer class="main-footer">
