Added some pages

--- a/Website/portal/teacherportal/profile.html
+++ b/Website/portal/teacherportal/profile.html
@@ -215,8 +215,8 @@
 						<div class="row">	
 							
 							<i style="margin-left:10px"class="fa fa-globe"></i>	
-						    <h style="margin-left:5px">is an</h>	
-                            <h><b>International student</b></h>								
+						    <h style="margin-left:5px">is a</h>	
+                            <h><b>Teacher</b></h>								
 						</div>
                         </div>
 						</div>
