Worked on portal pages

--- a/Website/portal/teacherportal/profile.html
+++ b/Website/portal/teacherportal/profile.html
@@ -238,7 +238,7 @@
                             <i class="fa fa-bar-chart-o fa-fw"></i>Contact details
                         </div>
                         <div class="panel-body">
-                            <div class="box-body">
+                            <div style="border-bottom-style:dotted;border-width: 1px;"class="box-body">
                                 <dl class="dl-horizontal">
                                     <dt>Primary contact number:</dt>
                                     <dd>012345678</dd>
@@ -253,8 +253,15 @@
                                     </dd>
                                 </dl>
                             </div>
-							
-                            <a href="#" class="btn btn-default btn-block">Update Contact Details</a>
+							<div style=""class="row">						
+							    <i style="margin-left:10px"class="fa fa-transgender"></i>	
+						        <h style="margin-left:5px">identifies as a</h>										
+						    </div>
+							<div class="row">						
+							    <i style="margin-left:10px"class="fa fa-transgender"></i>	
+						        <h style="margin-left:5px">identifies as a</h>										
+						    </div>
+                           <!--  <a href="#" class="btn btn-default btn-block">Update Contact Details</a> -->
                         </div>
 
                     </div>
