Worked on portal pages

--- a/Website/portal/profile.html
+++ b/Website/portal/profile.html
@@ -75,7 +75,7 @@
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="teachercontact.html" class="btn btn-default btn-flat">Profile</a>
+                  <a href="profile.html" class="btn btn-default btn-flat">Profile</a>
                 </div>
                 <div class="pull-right">
                   <a href="../home.html" class="btn btn-default btn-flat">Sign out</a>
@@ -238,7 +238,7 @@
                             <i class="fa fa-bar-chart-o fa-fw"></i>Contact details
                         </div>
                         <div class="panel-body">
-                            <div class="box-body">
+                            <div style="border-bottom-style:dotted;border-width: 1px;"class="box-body">
                                 <dl class="dl-horizontal">
                                     <dt>Primary contact number:</dt>
                                     <dd>012345678</dd>
@@ -254,7 +254,14 @@
                                 </dl>
                             </div>
 							
-                            <a href="#" class="btn btn-default btn-block">Update Contact Details</a>
+                            <div style="margin-left:5px;margin-top:5px"class="row">						
+							    <i style="margin-left:10px"class="fa fa-share"></i>	
+						        <a href="#" style="margin-left:5px">Update contact details</a>										
+						    </div>
+							<div style="margin-left:5px;"class="row">						
+							    <i style="margin-left:10px"class="fa fa-share"></i>	
+						        <a href="#" style="margin-left:5px">Change password</a>										
+						    </div>
                         </div>
 
                     </div>
