--- a/Website/portal/teacherportal/profile.html
+++ b/Website/portal/teacherportal/profile.html
@@ -75,7 +75,7 @@
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="teachercontact.html" class="btn btn-default btn-flat">Profile</a>
+                  <a href="profile.html" class="btn btn-default btn-flat">Profile</a>
                 </div>
                 <div class="pull-right">
                   <a href="../../home.html" class="btn btn-default btn-flat">Sign out</a>
@@ -249,19 +249,19 @@
                                     <dd>00 Rothburn Street</dd>
 									<dd>DOLLANDELLA Queensland 4077, Australia</dd>
                                     <dt>Email address</dt>
-                                    <dd>keyboardsmasher@gmail.com
+                                    <dd><a>keyboardsmasher@gmail.com</a>
                                     </dd>
                                 </dl>
                             </div>
-							<div style=""class="row">						
-							    <i style="margin-left:10px"class="fa fa-transgender"></i>	
-						        <h style="margin-left:5px">identifies as a</h>										
+							<div style="margin-left:5px;margin-top:5px"class="row">						
+							    <i style="margin-left:10px"class="fa fa-share"></i>	
+						        <a href="#" style="margin-left:5px">Update contact details</a>										
 						    </div>
-							<div class="row">						
-							    <i style="margin-left:10px"class="fa fa-transgender"></i>	
-						        <h style="margin-left:5px">identifies as a</h>										
+							<div style="margin-left:5px;"class="row">						
+							    <i style="margin-left:10px"class="fa fa-share"></i>	
+						        <a href="#" style="margin-left:5px">Change password</a>										
 						    </div>
-                           <!--  <a href="#" class="btn btn-default btn-block">Update Contact Details</a> -->
+                           
                         </div>
 
                     </div>
