--- a/Website/portal/teacherportal/studentcontact.html
+++ b/Website/portal/teacherportal/studentcontact.html
@@ -75,7 +75,7 @@
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
+                  <a href="profile.html" class="btn btn-default btn-flat">Profile</a>
                 </div>
                 <div class="pull-right">
                   <a href="../../home.html" class="btn btn-default btn-flat">Sign out</a>
