Worked on portal pages

--- a/Website/portal/profile.html
+++ b/Website/portal/profile.html
@@ -249,7 +249,7 @@
                                     <dd>00 Rothburn Street</dd>
 									<dd>DOLLANDELLA Queensland 4077, Australia</dd>
                                     <dt>Email address</dt>
-                                    <dd>keyboardsmasher@gmail.com
+                                    <dd><a>keyboardsmasher@gmail.com</a>
                                     </dd>
                                 </dl>
                             </div>
